texi2html/test/invalid/res_info/texi_ignored_not_closed/ignored_not_closed.texi.first
\input texinfo @c -*-texinfo-*-

@node Top

texte

